# rfh_testdatascience_1

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: test3.pkl
notebooks/: EDA.html  EDA.ipynb  model_comparation.html  model_comparation.ipynb
rfh_testdatascience_1/: __init__.py  config.py  dataset.py  features.py  main.py  main_prod.py  pipeline.py  plots.py  train.py
rfh_testdatascience_1/modeling/: predict.py  train.py
