[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rfh_testdatascience_1"
version = "0.0.1"
description = "Prueba de nivel posici\u00f3n Capgemini. Modelo de clasificaci\u00f3n."
authors = [
  { name = "Roberto Flores" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["rfh_testdatascience_1"]
force_sort_within_sections = true


